src/objects/Zuora__PaymentMethod__c.object
<CustomObject>
    <description>PaymentMethod contains information on how the contact pays for the account. In order to activate an account, you need to create a payment method.</description>
    <fields>
        <fullName>ARR_SF_ID__c</fullName>
        <formula>Zuora__BillingAccount__r.Zuora__Account__r.Owner.ARR__r.Id</formula>
        <label>ARR SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ach_Aba_Code__c</fullName>
        <description>This is the nine-digit routing number or ABA number used by banks.
This field is required only when defining an ACH payment method.</description>
        <inlineHelpText>This is the nine-digit masked routing number or ABA number used by bank to help hide the routing number. For example: XXXXX1234</inlineHelpText>
        <label>Ach Aba Code</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Email__c</fullName>
        <formula>Zuora__BillingAccount__r.Zuora__BillToWorkEmail__c</formula>
        <label>Bill To Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Name__c</fullName>
        <formula>Zuora__BillingAccount__r.Zuora__BillToName__c</formula>
        <label>Bill To Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <formula>Zuora__BillingAccount__r.Name</formula>
        <label>Billing Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Declined_Notification_First_Sent_On__c</fullName>
        <label>CC Declined Notification First Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Failure_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Failure Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <formula>IF(VALUE(TEXT(Zuora__CreditCardExpirationMonth__c)) = 12,
   DATE(VALUE(Zuora__CreditCardExpirationYear__c) + 1, 1, 1) - 1,
   DATE(VALUE(Zuora__CreditCardExpirationYear__c), VALUE(TEXT(Zuora__CreditCardExpirationMonth__c)) + 1, 1) - 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Card Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diff_Exp_Date_vs_Today__c</fullName>
        <formula>Credit_Card_Expiration_Date__c  -  TODAY()</formula>
        <label>Diff - Exp Date vs Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notify_customer_Days__c</fullName>
        <formula>TODAY() - CC_Declined_Notification_First_Sent_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notify customer Day(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Account_Id__c</fullName>
        <formula>Zuora__BillingAccount__r.Zuora__Account__r.Id</formula>
        <label>SF Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__AchAbaCode__c</fullName>
        <description>This is the nine-digit routing number or ABA number used by banks.
This field is required only when defining an ACH payment method.</description>
        <inlineHelpText>This is the nine-digit routing number or ABA number used by banks.
This field is required only when defining an ACH payment method.</inlineHelpText>
        <label>Ach Aba Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__AchAccountName__c</fullName>
        <description>This is the name of the account holder (a person or a company).</description>
        <inlineHelpText>This is the name of the account holder (a person or a company).</inlineHelpText>
        <label>Ach Account Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__AchAccountNumberMask__c</fullName>
        <description>This is a mask to help hide the account number. For example: XXXXXXXXX54321</description>
        <inlineHelpText>This is a mask to help hide the account number. For example: XXXXXXXXX54321</inlineHelpText>
        <label>Ach Account Number Mask</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__AchAccountType__c</fullName>
        <description>Type of bank account, this ACH payment is coming from.</description>
        <inlineHelpText>Type of bank account, this ACH payment is coming from.</inlineHelpText>
        <label>Ach Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>BusinessChecking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__AchBankName__c</fullName>
        <description>This is the name of the bank where the ACH payment account is held.</description>
        <inlineHelpText>This is the name of the bank where the ACH payment account is held.</inlineHelpText>
        <label>Ach Bank Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies which payment methods are allowed within Zuora. The default value is false.</description>
        <inlineHelpText>Specifies which payment methods are allowed within Zuora. The default value is false.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__BankBranchCode__c</fullName>
        <description>The branch code of the bank used for Direct Debit.</description>
        <inlineHelpText>The branch code of the bank used for Direct Debit.</inlineHelpText>
        <label>Bank Branch Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankCheckDigit__c</fullName>
        <description>The check digit used in the International Bank Account Number to confirm the validity of the Account.</description>
        <inlineHelpText>The check digit used in the International Bank Account Number to confirm the validity of the Account.</inlineHelpText>
        <label>Bank Check Digit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankCity__c</fullName>
        <description>The city for the address of the bank used for Direct Debit.</description>
        <inlineHelpText>The city for the address of the bank used for Direct Debit.</inlineHelpText>
        <label>Bank City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankCode__c</fullName>
        <description>The code or number that identifies the bank. This is also known as the sort code.</description>
        <inlineHelpText>The code or number that identifies the bank. This is also known as the sort code.</inlineHelpText>
        <label>Bank Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankIdentificationNumber__c</fullName>
        <description>This is the first six digits of the PaymentMethod, such as the credit card number or account number.</description>
        <inlineHelpText>This is the first six digits of the PaymentMethod, such as the credit card number or account number.</inlineHelpText>
        <label>Bank Identification Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankName__c</fullName>
        <description>The name of the bank used for DirectDebit.</description>
        <inlineHelpText>The name of the bank used for DirectDebit.</inlineHelpText>
        <label>Bank Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankPostalCode__c</fullName>
        <description>he postal code of the bank used for Direct Debit.</description>
        <inlineHelpText>he postal code of the bank used for Direct Debit.</inlineHelpText>
        <label>Bank Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankStreetName__c</fullName>
        <description>The name of the street for the address of the bank used for Direct Debit.</description>
        <inlineHelpText>The name of the street for the address of the bank used for Direct Debit.</inlineHelpText>
        <label>Bank Street Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankStreetNumber__c</fullName>
        <description>The number for the street address of the bank used for Direct Debit.</description>
        <inlineHelpText>The number for the street address of the bank used for Direct Debit.</inlineHelpText>
        <label>Bank Street Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankTransferAccountName__c</fullName>
        <description>The name on the bank account used for direct debit.</description>
        <inlineHelpText>The name on the bank account used for direct debit.</inlineHelpText>
        <label>Bank Transfer Account Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankTransferAccountNumber__c</fullName>
        <description>The account number for of the customer&apos;s bank account.</description>
        <inlineHelpText>The account number for of the customer&apos;s bank account.</inlineHelpText>
        <label>Bank Transfer Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankTransferAccountType__c</fullName>
        <description>This field is used only for the DirectDebit payment method.</description>
        <inlineHelpText>This field is used only for the DirectDebit payment method.</inlineHelpText>
        <label>Bank Transfer Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BankTransferType__c</fullName>
        <description>This is specifies the type of DirectDebit that is being used. The value of this field is dependent on the country of the user.</description>
        <inlineHelpText>This is specifies the type of DirectDebit that is being used. The value of this field is dependent on the country of the user.</inlineHelpText>
        <label>Bank Transfer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingAccount__c</fullName>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zuora__BusinessIdentificationCode__c</fullName>
        <description>Use this field when creating a direct debit payment method for Switzerland when using the GlobalCollect payment gateway.</description>
        <inlineHelpText>Use this field when creating a direct debit payment method for Switzerland when using the GlobalCollect payment gateway.</inlineHelpText>
        <label>Business Identification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__City__c</fullName>
        <description>The city of the customer&apos;s address.</description>
        <inlineHelpText>The city of the customer&apos;s address.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Country__c</fullName>
        <description>The two-letter country code of the customer&apos;s country.</description>
        <inlineHelpText>The two-letter country code of the customer&apos;s country.</inlineHelpText>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedById__c</fullName>
        <description>Zuora system automatically generates this ID of the user who created the Payment Method.</description>
        <inlineHelpText>Zuora system automatically generates this ID of the user who created the Payment Method.</inlineHelpText>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>Zuora system automatically generates this date when the payment method is created.</description>
        <inlineHelpText>Zuora system automatically generates this date when the payment method is created.</inlineHelpText>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardAddress1__c</fullName>
        <description>The first line of the billing address for the credit or debit card holder.</description>
        <inlineHelpText>The first line of the billing address for the credit or debit card holder.</inlineHelpText>
        <label>Credit Card Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardAddress2__c</fullName>
        <description>The second line of the billing address for the credit or debit card holder.</description>
        <inlineHelpText>The second line of the billing address for the credit or debit card holder.</inlineHelpText>
        <label>Credit Card Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardCity__c</fullName>
        <description>The billing address&apos;s city.</description>
        <inlineHelpText>The billing address&apos;s city.</inlineHelpText>
        <label>Credit Card City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardCountry__c</fullName>
        <description>The country in which the billing address is located. Country names must be spelled in full.</description>
        <inlineHelpText>The country in which the billing address is located. Country names must be spelled in full.</inlineHelpText>
        <label>Credit Card Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardExpirationMonth__c</fullName>
        <label>Credit Card Expiration Month</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardExpirationYear__c</fullName>
        <description>The expiration year of the credit or debit card.</description>
        <inlineHelpText>The expiration year of the credit or debit card.</inlineHelpText>
        <label>Credit Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardHolderName__c</fullName>
        <description>The full name (first or personal and last or family) of the holder of the credit or debit card.</description>
        <inlineHelpText>The full name (first or personal and last or family) of the holder of the credit or debit card.</inlineHelpText>
        <label>Credit Card Holder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardMaskNumber__c</fullName>
        <description>A masked version of the credit or debit card number.</description>
        <inlineHelpText>A masked version of the credit or debit card number.</inlineHelpText>
        <label>Credit Card Mask Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardPostalCode__c</fullName>
        <description>The billing address&apos;s postal code.</description>
        <inlineHelpText>The billing address&apos;s postal code.</inlineHelpText>
        <label>Credit Card Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardState__c</fullName>
        <description>The billing address&apos;s state.</description>
        <inlineHelpText>The billing address&apos;s state.</inlineHelpText>
        <label>Credit Card State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardType__c</fullName>
        <description>The type of credit or debit card that is being billed.</description>
        <inlineHelpText>The type of credit or debit card that is being billed.</inlineHelpText>
        <label>Credit Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>AmericanExpress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__DefaultPaymentMethod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default payment method or not</description>
        <inlineHelpText>Default payment method or not</inlineHelpText>
        <label>Default Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__DeviceSessionId__c</fullName>
        <description>This is the (web) session ID of the user when the PaymentMethod was created or updated.</description>
        <inlineHelpText>This is the (web) session ID of the user when the PaymentMethod was created or updated.</inlineHelpText>
        <label>Device Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Email__c</fullName>
        <description>The email address connected to the PaymentMethod.</description>
        <inlineHelpText>The email address connected to the PaymentMethod.</inlineHelpText>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ExistingMandate__c</fullName>
        <label>Existing Mandate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__FirstName__c</fullName>
        <description>The customer&apos;s first name.</description>
        <inlineHelpText>The customer&apos;s first name.</inlineHelpText>
        <label>First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__IBAN__c</fullName>
        <description>The International Bank Account Number.</description>
        <inlineHelpText>The International Bank Account Number.</inlineHelpText>
        <label>IBAN</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__IPAddress__c</fullName>
        <description>This is the IP address of the user when the PaymentMethod was created or updated</description>
        <inlineHelpText>This is the IP address of the user when the PaymentMethod was created or updated</inlineHelpText>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__LastFailedSaleTransactionDate__c</fullName>
        <description>The is the date of the last failed attempt at collecting payment with this payment method.</description>
        <inlineHelpText>The is the date of the last failed attempt at collecting payment with this payment method.</inlineHelpText>
        <label>Last Failed Sale Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__LastName__c</fullName>
        <description>The customer&apos;s last name.</description>
        <inlineHelpText>The customer&apos;s last name.</inlineHelpText>
        <label>Last Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__LastTransactionDateTime__c</fullName>
        <description>The date of the most recent transaction.</description>
        <inlineHelpText>The date of the most recent transaction.</inlineHelpText>
        <label>Last Transaction DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__LastTransactionStatus__c</fullName>
        <description>The status of the most recent transaction.</description>
        <inlineHelpText>The status of the most recent transaction.</inlineHelpText>
        <label>Last Transaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__MandateCreationDate__c</fullName>
        <label>Mandate Creation Date (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__MandateCreation_Date__c</fullName>
        <label>Mandate Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__MandateID__c</fullName>
        <label>MandateID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__MandateReceived__c</fullName>
        <label>Mandate Received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__MandateUpdateDate__c</fullName>
        <label>Mandate UpdateDate (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__MandateUpdate_Date__c</fullName>
        <label>Mandate Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__MaxConsecutivePaymentFailures__c</fullName>
        <description>Specifies the number of allowable consecutive failures</description>
        <inlineHelpText>Specifies the number of allowable consecutive failures</inlineHelpText>
        <label>Max Consecutive Payment Failures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__NumConsecutiveFailures__c</fullName>
        <label>Number of Consecutive Failures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentMethodStatus__c</fullName>
        <description>Specify the status of the payment method, either Active or Closed.</description>
        <inlineHelpText>Specify the status of the payment method, either Active or Closed.</inlineHelpText>
        <label>Payment Method Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentRetryWindow__c</fullName>
        <description>Use the retry interval setting to prevent a payment attempt if the last failed payment was within the last number of hours.</description>
        <inlineHelpText>Use the retry interval setting to prevent a payment attempt if the last failed payment was within the last number of hours.</inlineHelpText>
        <label>Payment Retry Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__PaypalBaid__c</fullName>
        <description>The PayPal billing agreement ID.</description>
        <inlineHelpText>The PayPal billing agreement ID.</inlineHelpText>
        <label>Paypal Baid</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PaypalEmail__c</fullName>
        <description>The email address associated with the account holder&apos;s PayPal account</description>
        <inlineHelpText>The email address associated with the account holder&apos;s PayPal account</inlineHelpText>
        <label>Paypal Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PaypalPreapprovalKey__c</fullName>
        <description>This is a key that is obtained from PayPal&apos;s Adaptive Payments API.</description>
        <inlineHelpText>This is a key that is obtained from PayPal&apos;s Adaptive Payments API.</inlineHelpText>
        <label>Paypal Pre-approval Key</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PaypalType__c</fullName>
        <description>Specifies which PayPal gateway, either PayFlow Pro (Express Checkout) or Adaptive Payments.</description>
        <inlineHelpText>Specifies which PayPal gateway, either PayFlow Pro (Express Checkout) or Adaptive Payments.</inlineHelpText>
        <label>Paypal Type</label>
        <picklist>
            <picklistValues>
                <fullName>ExpressCheckout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdaptivePayments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Phone__c</fullName>
        <description>The phone number that the account holder registered with the bank.</description>
        <inlineHelpText>The phone number that the account holder registered with the bank.</inlineHelpText>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PostalCode__c</fullName>
        <description>The postal code of the customer&apos;s address.</description>
        <inlineHelpText>The postal code of the customer&apos;s address.</inlineHelpText>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Second_Token_ID__c</fullName>
        <description>The existing secondary token ID</description>
        <inlineHelpText>The existing secondary token ID</inlineHelpText>
        <label>Second Token ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__State__c</fullName>
        <description>The state portion of the customer&apos;s address.</description>
        <inlineHelpText>The state portion of the customer&apos;s address.</inlineHelpText>
        <label>State</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__StreetName__c</fullName>
        <description>The street name portion of the customer&apos;s address.</description>
        <inlineHelpText>The street name portion of the customer&apos;s address.</inlineHelpText>
        <label>Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__StreetNumber__c</fullName>
        <description>The street number of the customer&apos;s address.</description>
        <inlineHelpText>The street number of the customer&apos;s address.</inlineHelpText>
        <label>Street Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Token_ID__c</fullName>
        <description>The existing token ID</description>
        <inlineHelpText>The existing token ID</inlineHelpText>
        <label>Token ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TotalNumberOfErrorPayments__c</fullName>
        <label>Total Number Of Error Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__TotalNumberOfProcessedPayments__c</fullName>
        <description>The number of successful payments that have occurred using this payment method.</description>
        <inlineHelpText>The number of successful payments that have occurred using this payment method.</inlineHelpText>
        <label>Total Number Of Processed Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BankTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditCardReferenceTransaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DebitCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WireTransfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedById__c</fullName>
        <description>Zuora user who last updated this Payment Method</description>
        <inlineHelpText>Zuora user who last updated this Payment Method</inlineHelpText>
        <label>Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>Zuora system automatically generates this date when the payment method is modified</description>
        <inlineHelpText>Zuora system automatically generates this date when the payment method is modified</inlineHelpText>
        <label>Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__UseDefaultRetryRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Retry Rule</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>Zuora__All</fullName>
        <columns>NAME</columns>
        <columns>Zuora__Type__c</columns>
        <columns>Zuora__DefaultPaymentMethod__c</columns>
        <columns>Zuora__UseDefaultRetryRule__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Zuora__MaxConsecutivePaymentFailures__c</columns>
        <columns>Zuora__PaymentMethodStatus__c</columns>
        <columns>Zuora__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>